--- a/src/Proyectos/PrimeraImagen/PrimeraImagen.css
+++ b/src/Proyectos/PrimeraImagen/PrimeraImagen.css
@@ -24,6 +24,9 @@
     font-size: 1.5rem;
     padding-bottom: 5rem;
 }
+.concepto-flex > p {
+    color: #F4C3B9;
+}
 @media only screen and (max-width: 1136px) {
     .primera-imagen {
         height: 15rem;
