--- a/src/Proyectos copy/PrimeraImagen/PrimeraImagen.css
+++ b/src/Proyectos copy/PrimeraImagen/PrimeraImagen.css
@@ -45,7 +45,9 @@
     font-size: 8vw;
     padding-bottom: 2rem;
     margin: 0;
-
+}
+.boton-proyecto > a {
+    text-decoration: none;
 }
 @media only screen and (max-width: 1136px) {
     .primera-imagen {
