se agrega footer

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,7 +1,15 @@
 .footer{
     display: flex;
     padding-top: 5rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
+    /* padding-left: 5rem; */
+    /* padding-right: 5rem; */
     justify-content: space-between;
+}
+@media only screen and (max-width: 1136px) {
+    
+}
+@media only screen and (max-width: 910px) {
+    .footer{
+        flex-direction: column;
+    }
 }
