--- a/src/Projectos/Proyecto/Proyecto.css
+++ b/src/Projectos/Proyecto/Proyecto.css
@@ -52,13 +52,19 @@
     transition: all 0.4s;
     text-decoration: none;
 }
-
+.footer-home{
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
 @media only screen and (max-width: 1136px) {
     .proyecto-container-linea-abajo{
         margin-left: 2rem;
         margin-right: 2rem;
     }
-
+    .footer-home {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
 }
 @media only screen and (max-width: 800px) {
     .proyecto h4 {
